added background image

--- a/src/client/pages/home.html
+++ b/src/client/pages/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header backgroundImage="/images/marvel.jpg">
+    <header style="background-image: url('../assets/images/marvel.jpg')">
         <h1>Welcome to Pod Racer Sim</h1>
     </header>
     <main>
