--- a/src/client/pages/race.html
+++ b/src/client/pages/race.html
@@ -12,11 +12,12 @@
     <link rel="stylesheet" href="assets/stylesheets/create.css">
     <link rel="stylesheet" href="assets/stylesheets/progress.css">
     <link rel="stylesheet" href="assets/stylesheets/results.css">
+    
     <script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
 <body id="race">
-    <header>
+    <header style="background-image: url('../assets/images/marvel.jpg')">
         <h1>Start Your Pod Racer Sim</h1>
     </header>
     <main>
